The modified thing now.

--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1>Welcome to this Practice page!</h1>
     <p>As you see only practice makes a person perfect!</p>
+    <p>Coursera is a great course to have fun while you learn!!!!</p>
 </body>
 </html>
