--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
 <body>
   <h1>Welcome to this Practice page!</h1>
     <p>As you see only practice makes a person perfect!</p>
+    <span  style="color:yellow; background-color:blue">hey wanna <div>Hello World! This confuses me!</div></span>
     <p style="color:blue">Coursera is a great course to have fun while you learn!!!!</p>
 </body>
 </html>
